@@ -4,7 +4,6 @@ import bg.softuni.aquagatedb.model.dto.binding.TopicAddDTO;
 import bg.softuni.aquagatedb.model.dto.view.CommentView;
 import bg.softuni.aquagatedb.model.dto.view.TopicDetailsView;
 import bg.softuni.aquagatedb.model.dto.view.TopicView;
-import bg.softuni.aquagatedb.model.entity.Picture;
 import bg.softuni.aquagatedb.model.entity.Topic;
 import bg.softuni.aquagatedb.repository.TopicRepo;
 import bg.softuni.aquagatedb.web.error.ObjectNotFoundException;
@@ -16,7 +15,7 @@ import java.time.LocalDate;
 import java.time.ZoneOffset;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 @Service
 public class TopicService {
@@ -45,61 +44,75 @@ public class TopicService {
         Topic topic = modelMapper.map(topicAddDTO, Topic.class);
         topic.setDate(LocalDate.now(ZoneOffset.UTC));
         topic.setApproved(false);
+
         topic.setHabitat(habitatService.findHabitatByName(topicAddDTO.getHabitat()));
 
-        Picture picture = pictureService.addPicture(topicAddDTO.getPictureUrl());
-        topic.setPicture(picture);
+        topic.setPicture(pictureService.addPicture(topicAddDTO.getPictureUrl()));
 
         topic.setComments(new ArrayList<>());
 
         topicRepo.save(topic);
-        List<Topic> savedTopics = topicRepo
-                .findTopicByDescriptionAndNameOrderByIdDesc(topicAddDTO.getDescription(), topicAddDTO.getName());
-        if (savedTopics.isEmpty()) {
+
+        Topic savedTopic = topicRepo.findAll().stream()
+                .max((e1, e2) -> {
+                    Long id1 = e1.getId();
+                    Long id2 = e2.getId();
+                    return id1.compareTo(id2);
+                }).orElse(null);
+
+        if (savedTopic == null ||
+                savedTopic.getDate().isBefore(LocalDate.now(ZoneOffset.UTC)) ||
+                !Objects.equals(savedTopic.getDescription(), topicAddDTO.getDescription()) ||
+                !Objects.equals(savedTopic.getName(), topicAddDTO.getName()) ||
+                !Objects.equals(savedTopic.getAuthor(), topicAddDTO.getAuthor())) {
+
             throw new ObjectNotFoundException("Problem with saving the topic! Please try again!");
         }
-        return mapTopicView(savedTopics.get(0));
+
+        return mapTopicView(savedTopic);
     }
 
     public TopicDetailsView approveTopic(Long id) throws ObjectNotFoundException {
-        Topic topic = topicRepo.findById(id).orElse(null);
 
-        if (topic == null) {
+        if (topicRepo.findById(id).isEmpty()) {
             throw new ObjectNotFoundException("Topic not found!");
+        } else {
+            Topic topic = topicRepo.findById(id).get();
+            topic.setApproved(true);
+            topicRepo.save(topic);
+
+            return mapTopicDetailView(topicRepo.findById(id).get());
         }
-
-        topic.setApproved(true);
-        topicRepo.save(topic);
-
-        Topic updatedTopic = topicRepo.findById(id).orElse(null);
-
-        if (updatedTopic == null) {
-            throw new ObjectNotFoundException("Topic not found!");
-        }
-
-        return mapTopicDetailView(updatedTopic);
     }
 
-    public void removeTopic(Long id) throws ObjectNotFoundException {
-        Topic topic = topicRepo.findById(id).orElse(null);
-        if (topic == null) {
+    public boolean removeTopic(Long id) throws ObjectNotFoundException {
+        if (topicRepo.findById(id).isEmpty()) {
             throw new ObjectNotFoundException("Topic not found!");
-        }
+        } else {
+            Topic topic = topicRepo.findById(id).get();
+            topicRepo.delete(topic);
 
-        topicRepo.delete(topic);
+            return true;
+        }
     }
 
     public List<TopicView> findAllTopics() {
+
         List<Topic> all = topicRepo.findAll();
+
         if (all.isEmpty()) {
             return new ArrayList<>();
+
+        } else {
+
+            return all.stream()
+                    .map(this::mapTopicView)
+                    .toList();
         }
-        return all.stream()
-                .map(this::mapTopicView)
-                .collect(Collectors.toList());
     }
 
     private TopicView mapTopicView(Topic topic) {
+
         TopicView topicView = modelMapper.map(topic, TopicView.class);
 
         topicView.setPictureUrl(topic.getPicture().getPictureUrl());
@@ -109,55 +122,50 @@ public class TopicService {
     }
 
     public TopicDetailsView findTopicById(Long id) throws ObjectNotFoundException {
-        Topic topic = topicRepo.findById(id).orElse(null);
-        if (topic == null) {
+
+        if (topicRepo.findById(id).isEmpty()) {
+
             throw new ObjectNotFoundException("Topic not found!");
+        } else {
+
+            Topic topic = topicRepo.findById(id).get();
+            return mapTopicDetailView(topic);
         }
-        return mapTopicDetailView(topic);
     }
 
     private TopicDetailsView mapTopicDetailView(Topic topic) {
+
         TopicDetailsView topicDetailsView = modelMapper.map(topic, TopicDetailsView.class);
 
         topicDetailsView.setHabitat(topic.getHabitat().getName().toString());
         topicDetailsView.setComments(topic.getComments()
                 .stream()
                 .map(e -> modelMapper.map(e, CommentView.class))
-                .collect(Collectors.toList())
+                .toList()
         );
         topicDetailsView.setPicture(topic.getPicture().getPictureUrl());
 
         return topicDetailsView;
     }
 
-    public void initTestData() throws ObjectNotFoundException {
-        if (topicRepo.count() < 1) {
-            TopicAddDTO topicAddDTO = new TopicAddDTO();
-            topicAddDTO.setName("Test");
-            topicAddDTO.setDescription("To do test");
-            topicAddDTO.setLevel("BEGINNER");
-            topicAddDTO.setHabitat("BLACK_WATER");
-            topicAddDTO.setVideoUrl("MebHynnz0FY?si");
-            topicAddDTO.setPictureUrl("/images/picture-not-found-icon.png");
-            topicAddDTO.setAuthor(1L);
-            this.addTopic(topicAddDTO);
-        }
-    }
+    public Topic findTopicByIdToAddComment(Long id) throws ObjectNotFoundException {
 
-    public Topic findTopicToAddComment(Long id) throws ObjectNotFoundException {
-        Topic topic = topicRepo.findById(id).orElse(null);
-        if (topic == null) {
+        if (topicRepo.findById(id).isEmpty()) {
+
             throw new ObjectNotFoundException("Topic not found!");
+        } else {
+
+            return topicRepo.findById(id).get();
         }
-        return topic;
     }
 
     public void removeAllNotApprovedTopicsBeforeDate(LocalDate localDate) {
-        List<Topic> all = topicRepo.findAll();
-        if (!all.isEmpty()) {
-            List<Topic> list = all.stream()
-                    .filter(e -> !e.getApproved() && e.getDate().isBefore(localDate))
+
+        if (!topicRepo.findAll().isEmpty()) {
+            List<Topic> list = topicRepo.findAll().stream()
+                    .filter(e -> e.getDate().isBefore(localDate) && !e.getApproved())
                     .toList();
+
             if (!list.isEmpty()) {
                 topicRepo.deleteAll(list);
             }
